--- a/.gitattributes
+++ b/.gitattributes
@@ -15,4 +15,5 @@
 *.so.dbg filter=lfs diff=lfs merge=lfs -text
 *.blend* filter=lfs diff=lfs merge=lfs -text
 *.xcf filter=lfs diff=lfs merge=lfs -text
+*.lib filter=lfs diff=lfs merge=lfs -text
 *.exr filter=lfs diff=lfs merge=lfs -text
