--- a/shroom-game-real/.gitignore
+++ b/shroom-game-real/.gitignore
@@ -1,3 +1,13 @@
 # Godot 4+ specific ignores
-.godot/
+.godot/**
 /android/
+.nomedia
+.idea/
+
+# Keep extension_list
+!.godot/extension_list.cfg
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_credentials.cfg
