CRT and cleanup

--- a/shroom-game-real/.godot/extension_list.cfg
+++ b/shroom-game-real/.godot/extension_list.cfg
@@ -1,1 +1,2 @@
+res://addons/blender_godot_interop/blender-godot-interop.gdextension
 res://addons/godot-steam-audio/bin/libgodot-steam-audio.gdextension
