Lighting pass for overworld

--- a/shroom-game-real/ShroomGameReal.csproj
+++ b/shroom-game-real/ShroomGameReal.csproj
@@ -33,6 +33,7 @@
       <Content Include="scenes\HITW\Hole In The Wall Game.tscn" />
       <Content Include="scenes\HITW\HoleInTheWallGame.cs.uid" />
       <Content Include="Ui\PauseMenu\SettingsMenuController.cs.uid" />
+      <Content Include="Utilities\DirectionalLightHelper.cs.uid" />
     </ItemGroup>
     
 </Project>
