--- a/shroom-game-real/ShroomGameReal.csproj
+++ b/shroom-game-real/ShroomGameReal.csproj
@@ -32,6 +32,22 @@
       <Content Include="scenes\HITW\HitwContestant.cs.uid" />
       <Content Include="scenes\HITW\Hole In The Wall Game.tscn" />
       <Content Include="scenes\HITW\HoleInTheWallGame.cs.uid" />
+      <Content Include="Ui\keyboard_a.svg" />
+      <Content Include="Ui\keyboard_a.svg.import" />
+      <Content Include="Ui\keyboard_d.svg" />
+      <Content Include="Ui\keyboard_d.svg.import" />
+      <Content Include="Ui\keyboard_s.svg" />
+      <Content Include="Ui\keyboard_s.svg.import" />
+      <Content Include="Ui\keyboard_space.svg" />
+      <Content Include="Ui\keyboard_space.svg.import" />
+      <Content Include="Ui\keyboard_w.svg" />
+      <Content Include="Ui\keyboard_w.svg.import" />
+      <Content Include="Ui\mouse_left.svg" />
+      <Content Include="Ui\mouse_left.svg.import" />
+      <Content Include="Ui\mouse_right.svg" />
+      <Content Include="Ui\mouse_right.svg.import" />
+      <Content Include="Ui\mouse_scroll_vertical.svg" />
+      <Content Include="Ui\mouse_scroll_vertical.svg.import" />
       <Content Include="Ui\PauseMenu\SettingsMenuController.cs.uid" />
       <Content Include="Utilities\DirectionalLightHelper.cs.uid" />
       <Content Include="Utilities\Settings\Icons\bool.svg" />
