--- a/shroom-game-real/export_presets.cfg
+++ b/shroom-game-real/export_presets.cfg
@@ -6,10 +6,11 @@ runnable=true
 advanced_options=false
 dedicated_server=false
 custom_features=""
-export_filter="all_resources"
+export_filter="scenes"
+export_files=PackedStringArray("res://scenes/default_game.tscn", "res://scenes/obby/levels/full_obby.tscn", "res://scenes/obby/levels/just_balls.tscn", "res://scenes/obby/levels/just_falling_balls.tscn", "res://scenes/obby/levels/just_finale.tscn", "res://scenes/obby/levels/just_single_spinner.tscn", "res://scenes/obby/levels/just_spinners.tscn", "res://scenes/obby/levels/just_spinning_floor.tscn", "res://scenes/obby/obby.tscn", "res://scenes/off/off.tscn", "res://scenes/off/static.tscn", "res://scenes/Scoot Shoot/Enemies/Shooter Enemy.tscn", "res://scenes/Scoot Shoot/Scoot Shoot Game.tscn", "res://Singletons/Global Game State Singleton.tscn", "res://Utilities/Settings/SettingsManager Singleton.tscn", "res://Utilities/MouseReleaser Singleton.tscn", "res://scenes/8AM/8am.tscn", "res://scenes/6PM/6pm.tscn", "res://scenes/3PM/3pm.tscn", "res://scenes/10AM/10am.tscn", "res://scenes/12AM/12am.tscn", "res://scenes/12PM/12pm.tscn", "res://scenes/ads/ads.tscn", "res://scenes/dream/avoid balls/ball.tscn", "res://scenes/dream/fire hop/fire.tscn", "res://scenes/dream/swat/swat.tscn", "res://scenes/dream/timer/bomb_timer.tscn", "res://scenes/dream/timer/DreamTimer.tscn", "res://scenes/dream/transition/Static.tscn", "res://scenes/dream/transition/dream_transition.tscn")
 include_filter=""
 exclude_filter=""
-export_path="../../../ShroomGameReal.exe"
+export_path="../Dist/Windows/ShroomGameReal.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -26,7 +27,7 @@ debug/export_console_wrapper=1
 binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
-shader_baker/enabled=false
+shader_baker/enabled=true
 binary_format/architecture="x86_64"
 codesign/enable=false
 codesign/timestamp=true
@@ -66,5 +67,51 @@ ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debu
 Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
 Remove-Item -Recurse -Force '{temp_dir}'"
 dotnet/include_scripts_content=false
+dotnet/include_debug_symbols=true
+dotnet/embed_build_outputs=false
+
+[preset.1]
+
+name="Linux"
+platform="Linux"
+runnable=true
+advanced_options=false
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../Dist/Linux/ShroomGameReal.x86_64"
+patches=PackedStringArray()
+encryption_include_filters=""
+encryption_exclude_filters=""
+seed=0
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+debug/export_console_wrapper=1
+binary_format/embed_pck=false
+texture_format/s3tc_bptc=true
+texture_format/etc2_astc=false
+shader_baker/enabled=false
+binary_format/architecture="x86_64"
+ssh_remote_deploy/enabled=false
+ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/port="22"
+ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/run_script="#!/usr/bin/env bash
+export DISPLAY=:0
+unzip -o -q \"{temp_dir}/{archive_name}\" -d \"{temp_dir}\"
+\"{temp_dir}/{exe_name}\" {cmd_args}"
+ssh_remote_deploy/cleanup_script="#!/usr/bin/env bash
+kill $(pgrep -x -f \"{temp_dir}/{exe_name} {cmd_args}\")
+rm -rf \"{temp_dir}\""
+dotnet/include_scripts_content=true
 dotnet/include_debug_symbols=true
 dotnet/embed_build_outputs=false
